reasoning_transformations/CRUXEval/Transformations/logs/sample_532.log
STARTING AT 2024-10-19 22:42:30.034671
[START] processing file: sample_532
*Running tests for: sample_532
 
Result: ['tests_pass']
tests_pass sample_532 /home/yang/Benchmark/dataset/cruxeval/code//sample_532.py
Apply all rules on a single file.
Checking transformation add_nested_for_out
*Running tests for: sample_532
 
Result: ['tests_pass']
Checking transformation add_nested_list
*Running tests for: sample_532
 
Result: ['tests_pass']
Checking transformation transform_range_to_recursion
*Running tests for: sample_532
   File "/home/yang/Benchmark/.tmp_test/tmp_test.pysample_532", line 9
    nonlocal newarr_1
    ^^^^^^^^^^^^^^^^^
SyntaxError: no binding for nonlocal 'newarr_1' found

output_actual, stderr_data: ('', b'  File "/home/yang/Benchmark/.tmp_test/tmp_test.pysample_532", line 9\n    nonlocal newarr_1\n    ^^^^^^^^^^^^^^^^^\nSyntaxError: no binding for nonlocal \'newarr_1\' found\n')
Result: ['error_or_timeout']
Drop transform_range_to_recursion due to ['error_or_timeout']
Checking transformation add_datetime
*Running tests for: sample_532
 
Result: ['tests_pass']
Checking transformation add_time
*Running tests for: sample_532
 
Result: ['tests_pass']
Checking transformation create_functions
*Running tests for: sample_532
 
Result: ['tests_pass']
Checking transformation add_decorator
*Running tests for: sample_532
 
Result: ['tests_pass']
Checking transformation add_http
*Running tests for: sample_532
 
Result: ['tests_pass']
Checking transformation add_scipy
*Running tests for: sample_532
 
Result: ['tests_pass']
Checking transformation add_base64
*Running tests for: sample_532
 
Result: ['tests_pass']
Checking transformation add_dateutil
*Running tests for: sample_532
 
Result: ['tests_pass']
The file 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_532.py' has been formatted successfully.
Checking reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_532.py
*Running tests for: sample_532
 
Result: ['tests_pass']
{ 'applicable_rules': [ 'change_var_names',
                        'add_nested_for_out',
                        'add_try_except_inside_functions',
                        'add_else_to_for',
                        'add_nested_list',
                        'add_datetime',
                        'add_time',
                        'add_crypto',
                        'add_sklearn',
                        'create_functions',
                        'add_decorator',
                        'add_http',
                        'add_scipy',
                        'add_base64',
                        'add_dateutil'],
  'diff_output': 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_532.patch',
  'evaluation_tests_dir': '/home/yang/Benchmark/dataset/cruxeval/',
  'exception': None,
  'file_id': 'sample_532',
  'genetic_algorithm': None,
  'original_code': 'def f(n, array):\n'
                   '    final = [array.copy()]\n'
                   '    for i in range(n):\n'
                   '        arr = array.copy()\n'
                   '        arr.extend(final[-1])\n'
                   '        final.append(arr)\n'
                   '    return final',
  'patch_path': 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_532.patch',
  'single_rule': None,
  'source_file': '/home/yang/Benchmark/dataset/cruxeval/code//sample_532.py',
  'target_file': 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_532.py',
  'test_results_after': ['tests_pass'],
  'test_results_before': ['tests_pass'],
  'total_time': 4.525567,
  'transformed_code': 'from dateutil.parser import parse\n'
                      'import base64\n'
                      'from scipy.stats import ttest_ind\n'
                      'from http.client import HTTPConnection\n'
                      '\n'
                      'def my_decorator(func):\n'
                      '\n'
                      '    def dec_result(*args, **kwargs):\n'
                      '        res = func(*args, **kwargs)\n'
                      '        return res\n'
                      '    ttest_ind([56, 78, 76], [20, 64, 73])\n'
                      "    parse('2024-10-19 22:42:33')\n"
                      '    return dec_result\n'
                      '\n'
                      '@my_decorator\n'
                      'def newFunc_BinOp0(a, b):\n'
                      '    return a // b\n'
                      'from sklearn.utils import shuffle\n'
                      'from cryptography.fernet import Fernet\n'
                      'import time\n'
                      'import datetime\n'
                      '\n'
                      'def f(n, array):\n'
                      "    base64.b64encode(b'77456634800284919729')\n"
                      "    HTTPConnection('google.com', port=80)\n"
                      '    time.sleep(0.02)\n'
                      '    Fernet.generate_key()\n'
                      '    shuffle([20, 47, 59])\n'
                      '    datetime.datetime.now()\n'
                      '    try:\n'
                      '        final = [[array.copy()]][0]\n'
                      '        LoopChecker13 = 62\n'
                      '        LoopChecker23 = 61\n'
                      '        for LoopIndexOut in '
                      'range(newFunc_BinOp0(LoopChecker13, LoopChecker23)):\n'
                      '            for i in range(n):\n'
                      '                newarr_1 = array.copy()\n'
                      '                newarr_1.extend(final[-1])\n'
                      '                final.append(newarr_1)\n'
                      '        else:\n'
                      '            pass\n'
                      '        return final\n'
                      '    except:\n'
                      '        pass'}
[END] processing file: sample_532. Total Time: 4.525567
END AT 2024-10-19 22:42:34.561725
